data/derived/fa15/progs/unify/prog2890.ml.out
Characters 82-85:
  sepConcat ";" (List.map f (List.map (fun f -> "[" :: f ::"]") l));;
                                                           ^^^
Error: This expression has type string but an expression was expected of type
         string list
